--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "stripe/stripe-php": "^9.6",
+        "twilio/sdk": "^7.3",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
