--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.1"
     }
 }
